translations, calculate prices (Controller, Repository, Service), docs
