# resources/lang/es/film.php
@@ -1,0 +1,13 @@
+<?php
+/**
+ * Created for tuliga-video.
+ * User: Sergio Martin Marquina
+ * Email: smarquina@zenos.es
+ * Date: 18/08/2020
+ * Time: 18:24
+ */
+return [
+    'date_begin' => 'Fecha de recogida',
+    'date_end'   => 'Fecha de entrega',
+    'film'       => 'Película',
+];
